--- a/PlacementWorks/simpleWork/style.css
+++ b/PlacementWorks/simpleWork/style.css
@@ -13,9 +13,11 @@ table{
     border: 3px solid black;
     height: 150px;
     width: 200px;
+    width: 30vw;
 }
 th,td{
     border: 3px solid black;
+    padding: 10px;
 }
 
 form{
