--- a/PlacementWorks/simpleWork/style3.css
+++ b/PlacementWorks/simpleWork/style3.css
@@ -34,3 +34,47 @@ marquee{
     background-color: green;
     padding: 5px;
 }
+
+input{
+    background-color: black;
+    border: 4px solid rgb(222, 218, 218);
+    color: aquamarine;
+}
+#name:focus{
+    border: 5px solid rgb(48, 0, 125);
+}
+#fname:active{
+    border: 5px solid rgb(97, 255, 97);
+}
+#lname:hover{
+    background-color: rgb(29, 90, 70);
+}
+#gender::selection{
+    border: 5px solid rgb(97, 255, 97);
+}
+p{
+    background-color: rgb(222, 218, 218);
+}
+.html{
+ background-color: yellow;
+ height:150px;
+ width:150px;
+ margin:10px;
+ position:static;
+}
+.css {
+    background-color: rgb(0, 64, 255);
+     height:150px;
+     width:150px;
+     margin:10px;
+     position:relative;
+     left:20px;
+     top:20px;
+}
+.java{
+    background-color: rgb(255, 0, 0);
+     height:150px;
+     width:150px;
+     margin:10px;
+     position:absolute;
+}
