--- a/PlacementWorks/simpleWork/classWorks/ani.css
+++ b/PlacementWorks/simpleWork/classWorks/ani.css
@@ -2,16 +2,19 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 div{
     margin-top: 5vh;
     height: 100px;
     width: 100px;
+    border-radius: 50%;
     background-color: rgb(255, 0, 0);
     /* animation: change-color 1s ease-in-out 0.5s 100 ; */
     animation-name: change-color;
     animation-fill-mode: backwards;
-    animation-duration: 1s;
+    animation-duration: 2s;
+    animation-delay: 2s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     position: relative;
@@ -20,33 +23,27 @@ div{
 @keyframes change-color {
     0%{
         background-color: rgb(255, 145, 0);
-        top: 20vh;
-        bottom: 20vh;
-        
+        top: 50vh;
+        bottom: 50vh; 
     }
-    20%{
+    25%{
         background-color: rgb(255, 234, 0);
-        top: 30vh;
-        bottom: 30vh;
+        top: 10vh;                                              
+        bottom: 10vh;
     }
-    40%{
+    50%{
         background-color: rgb(85, 255, 0);
-        top: 20vh;
-        bottom: 20vh;
+        top: 50vh;
+        bottom: 50vh;
     }
-    60%{
+    75%{
         background-color: rgb(0, 238, 255);
-        top: 20vh;
-        bottom: 20vh;
-    }
-    80%{
-        background-color: rgb(47, 0, 255);
-        top: 20vh;
-        bottom: 20vh;
+        top: 10vh;
+        bottom: 10vh;
     }
     100%{
         background-color: rgb(255, 0, 81);
-        top: 20vh;
-        bottom: 20vh;
+        top: 50vh;
+        bottom: 50vh;
     }
 }
