--- a/PlacementWorks/simpleWork/form-validation/style.css
+++ b/PlacementWorks/simpleWork/form-validation/style.css
@@ -6,8 +6,10 @@ To get box shadow use this website: https://getcssscan.com/css-box-shadow-exampl
     margin: 0;
 }
 body{
+    font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
     width: 100vw;
+    color: white;
     background: linear-gradient(to right bottom, #d16ba5, #c37bbf, #b08bd3, #9a9ae1, #86a8e7);
     background-size: 400% 400%;
     animation: animatebg 5s ease infinite;
@@ -16,7 +18,7 @@ body{
     align-items: center;
 }
 
-.con-main{
+.main-container{
     height: fit-content;
     width: 30vw;
     background-color: palevioletred;
@@ -36,10 +38,9 @@ form div{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
     padding: 10px;
 }
-input{
+.input-style{
     background: linear-gradient(to right bottom, #d16ba5, #c37bbf, #b08bd3, #9a9ae1, #86a8e7);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     background-size: 400% 400%;
@@ -50,21 +51,42 @@ input{
     padding: 5px;
     font-size: 15px;
 }
-input:focus{
+.input-style:focus{
+    outline: transparent;
+}
+.option-style{
+    background: linear-gradient(to right bottom, #d16ba5, #c37bbf, #b08bd3, #9a9ae1, #86a8e7);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background-size: 400% 400%;
+    animation: animatebg 5s ease infinite;
+    border-radius: 10px;
+    border: transparent;
+    height: 40px;
+    width: 70%;
+    padding: 5px;
+    font-size: 15px;
+}
+select:focus{
     outline: transparent;
 }
 
 button{
     background: linear-gradient(to right bottom, #d16ba5, #c37bbf, #b08bd3, #9a9ae1, #86a8e7);
-    transition: 1s;
+    transition: 0.5s;
     background-size: 400% 400%;
     animation: animatebg 5s ease infinite;
-    padding: 5px 20px 5px 20px;
+    padding: 10px 40px 10px 40px;
     border-radius: 10px;
     border: transparent;
+    margin: 10px;
 }
 button:hover{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    color: white;
+}
+
+select option #span-color{
+    color: rgb(255, 255, 255);
 }
 
 @keyframes animatebg{                                                   
